# KernelBenchXLA

./: .gitignore  main.py  pyproject.toml
KernelBench/level1/: 100_HingeLoss.py  10_3D_tensor_matrix_multiplication.py  11_4D_tensor_matrix_multiplication.py  12_Matmul_with_diagonal_matrices_.py  13_Matmul_for_symmetric_matrices.py  14_Matmul_for_upper_triangular_matrices.py  15_Matmul_for_lower_triangular_matrices.py  16_Matmul_with_transposed_A.py  17_Matmul_with_transposed_B.py  18_Matmul_with_transposed_both.py  19_ReLU.py  1_Square_matrix_multiplication_.py  20_LeakyReLU.py  21_Sigmoid.py  22_Tanh.py  23_Softmax.py  24_LogSoftmax.py  25_Swish.py  26_GELU_.py  27_SELU_.py  28_HardSigmoid.py  29_Softplus.py  2_Standard_matrix_multiplication_.py  30_Softsign.py  31_ELU.py  32_HardTanh.py  33_BatchNorm.py  34_InstanceNorm.py  35_GroupNorm_.py  37_FrobeniusNorm_.py  38_L1Norm_.py  39_L2Norm_.py  3_Batched_matrix_multiplication.py  41_Max_Pooling_1D.py  42_Max_Pooling_2D.py  (+59 more)
scripts/: benchmark_eval_analysis.py  debug_stddout.py  eval_from_generations.py  generate_and_eval_single_sample.py  generate_and_eval_single_sample_modal.py  generate_baseline_time.py  generate_baseline_time_modal.py  generate_samples.py  get_baseline_time_single_problem.py  inspect_baseline.py  inspect_kernel_pytorch_profiler.py  inspect_triton.py  run_and_check.py  verify_bench.py  verify_generation.py
src/: __init__.py  analysis.py  compile.py  dataset.py  eval.py  frameworks.py  make_hf_dataset.py  prompt_constructor.py  prompt_constructor_multilang.py  score.py  utils.py
(+195 files in other folders)
